some styling issues on xs displays; some spacing for Safari

--- a/src/views/wedding/wedding.scss
+++ b/src/views/wedding/wedding.scss
@@ -69,10 +69,11 @@ section.wedding-view {
 
 			dl {
 				dt {
-					width: 150px;
+					float: left;
+					width: 160px;
 				}
 				dd {
-					margin-left: 135px;
+					margin-left: 160px;
 				}
 			}
 		}
